crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_wrapper_struct.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = {{(identifier) @id (number) @num} @row}* @rows
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "row"
S4 "rows"
S5 "Test"
S6 "number"
S7 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, num }
T2 = Struct  M2:1  ; { row }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M3:1  ; { rows }
T5 = Struct  M4:1  ; { id }
T6 = Struct  M5:1  ; { num }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; num: <Node>
M2: S3 → T1  ; row: T1
M3: S4 → T3  ; rows: T3
M4: S1 → T0  ; id: <Node>
M5: S2 → T0  ; num: <Node>

[type_names]
N0: S5 → T4  ; Test

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   ε   [Arr]                            10
  10   ε                                    36, 17
  12   ε   [EndObj Push]                    14
  14   ε                                    42, 17
  16                                        ▶
  17   ε   [EndArr Set(M3)]                 16
  19   ε   [EndObj Set(M2)]                 12
  21   ▷   (number) [Node Set(M1)]          19
  23  ...  
  24   !   (identifier) [Node Set(M0)]      21
  26   ε   [Obj]                            24
  28   ε   [Obj]                            26
  30   ▷   _                                34
  31  ...  
  32   ε                                    30, 17
  34   ε                                    28, 32
  36   !   _                                34
  37   ▷   _                                40
  38   ε                                    37, 17
  40   ε                                    28, 38
  42   ▷   _                                40
