crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__definitions_nested_capture.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Inner = (call (identifier) @name)
Outer = (parent {(Inner) @item}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Inner"
S5 "Outer"
S6 "call"
S7 "identifier"
S8 "parent"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M2:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T1  ; item: Inner
M2: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Inner
N1: S5 → T4  ; Outer

[entrypoints]
Inner = 06 :: T1
Outer = 12 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Inner:
  06   ε                                    07
  07   !   (call)                           08
  08   ▽   (identifier) [Node Set(M0)]      10
  10   △   _                                11
  11                                        ▶

Outer:
  12   ε                                    13
  13   !   (parent)                         14
  14   ε   [Arr]                            16
  16   ε                                    40, 18
  18   ε   [EndArr Set(M2)]                 20
  20   △   _                                25
  21   ε   [EndObj Push]                    23
  23   ε                                    46, 18
  25                                        ▶
  26   ε   [Set(M1)]                        21
  28   ε   [EndObj]                         26
  30   !   (Inner)                          06 : 28
  31   ε   [Obj]                            30
  33   ε   [Obj]                            31
  35   ▷   _                                38
  36   ε                                    35, 18
  38   ε                                    33, 36
  40   ▽   _                                38
  41   ▷   _                                44
  42   ε                                    41, 18
  44   ε                                    33, 42
  46   ▷   _                                44
